--- a/pom.xml
+++ b/pom.xml
@@ -332,45 +332,45 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <executions>
-                        <execution>
-                            <phase>prepare-package</phase>
-                            <goals>
-                                <goal>jar</goal>
-                            </goals>
-                        </execution>
-                    </executions>
+                    <!--<executions>-->
+                        <!--<execution>-->
+                            <!--<phase>prepare-package</phase>-->
+                            <!--<goals>-->
+                                <!--<goal>jar</goal>-->
+                            <!--</goals>-->
+                        <!--</execution>-->
+                    <!--</executions>-->
                 </plugin>
 
                 <!-- YUI Compressor (CSS/JS压缩) -->
-                <plugin>
-                    <groupId>net.alchim31.maven</groupId>
-                    <artifactId>yuicompressor-maven-plugin</artifactId>
-                    <version>1.5.1</version>
-                    <executions>
-                        <execution>
-                            <phase>prepare-package</phase>
-                            <goals>
-                                <goal>compress</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <encoding>UTF-8</encoding>
-                        <jswarn>false</jswarn>
-                        <nosuffix>true</nosuffix>
-                        <linebreakpos>30000</linebreakpos>
-                        <force>true</force>
-                        <includes>
-                            <include>**/*.js</include>
-                            <include>**/*.css</include>
-                        </includes>
-                        <excludes>
-                            <exclude>**/*.min.js</exclude>
-                            <exclude>**/*.min.css</exclude>
-                        </excludes>
-                    </configuration>
-                </plugin>
+                <!--<plugin>-->
+                    <!--<groupId>net.alchim31.maven</groupId>-->
+                    <!--<artifactId>yuicompressor-maven-plugin</artifactId>-->
+                    <!--<version>1.5.1</version>-->
+                    <!--<executions>-->
+                        <!--<execution>-->
+                            <!--<phase>prepare-package</phase>-->
+                            <!--<goals>-->
+                                <!--<goal>compress</goal>-->
+                            <!--</goals>-->
+                        <!--</execution>-->
+                    <!--</executions>-->
+                    <!--<configuration>-->
+                        <!--<encoding>UTF-8</encoding>-->
+                        <!--<jswarn>false</jswarn>-->
+                        <!--<nosuffix>true</nosuffix>-->
+                        <!--<linebreakpos>30000</linebreakpos>-->
+                        <!--<force>true</force>-->
+                        <!--<includes>-->
+                            <!--<include>**/*.js</include>-->
+                            <!--<include>**/*.css</include>-->
+                        <!--</includes>-->
+                        <!--<excludes>-->
+                            <!--<exclude>**/*.min.js</exclude>-->
+                            <!--<exclude>**/*.min.css</exclude>-->
+                        <!--</excludes>-->
+                    <!--</configuration>-->
+                <!--</plugin>-->
             </plugins>
         </pluginManagement>
 
