增加了几个自定义配置，当前还没有用上

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,3 +48,9 @@ jwt:
   key: lick
   ttl: 360000
 
+my:
+  serverfilepath:
+    orguppath: c:/upload
+    passpath: c:/outpath
+    downpath: c:/download
+
